Serialize workspace selection and settle native surface ordering
Queue complete workspace intents through snapshot, decision and acknowledgement on the existing controller Handler. Keep requested focus separate from observed focus and discard stale session acknowledgements.

Use one native TO_FRONT for ordinary freeform selection, share the WindowManager surface queue, and pass the framework transition/input barrier before final fullscreen-plane composition. Preserve explicit demotion blockers in mixed workspace ordering.

Add regression tests, boundary checks and barrier diagnostics. Verified unit tests and manual wired activation/demotion; interactive self-tests were not rerun.