@@ -4,6 +4,8 @@ import android.os.IBinder;
 
 /** Central submission boundary for shell-side window transactions. */
 final class ShellWindowTransitionExecutor {
+    private static Object sWindowOrganizer;
+
     enum SystemTransition {
         OPEN(1),
         TO_FRONT(3),
@@ -23,6 +25,7 @@ final class ShellWindowTransitionExecutor {
             final Object activityTaskManagerService,
             final Class<?> transactionClass,
             final Object transaction) throws ReflectiveOperationException {
+        prepareSurfaceTransactions();
         SyncWindowContainerTransaction.applyWithoutSurfaceSync(
                 activityTaskManagerService, transactionClass, transaction);
     }
@@ -31,16 +34,46 @@ final class ShellWindowTransitionExecutor {
             final Object activityTaskManagerService,
             final Class<?> transactionClass,
             final Object transaction) throws ReflectiveOperationException {
+        prepareSurfaceTransactions();
         SyncWindowContainerTransaction.apply(
                 activityTaskManagerService, transactionClass, transaction);
+    }
+
+    static void applySelection(
+            final Object activityTaskManagerService,
+            final int displayId,
+            final Class<?> transactionClass,
+            final Object transaction,
+            final int windowingMode) throws ReflectiveOperationException {
+        if (selectionRequiresSystemTransition(windowingMode)) {
+            // A plain WCT, even with a sync callback, can change the root-task
+            // hierarchy without assigning its new surface layers. WM's native
+            // transition owns that assignment for ordinary freeform tasks.
+            // Submit once: a later focus/raise would be a competing selection.
+            startForShellAdoption(displayId, SystemTransition.TO_FRONT,
+                    transactionClass, transaction, "select-freeform-task");
+            // Return only after the framework's transition/input barrier.
+            // The topology owner commits its final plane layers next; doing
+            // that before WM's finish transaction lets WM overwrite them.
+            FrameworkWindowCommitBarrier.awaitSystemTransitions();
+        } else {
+            applyAtomic(activityTaskManagerService, transactionClass, transaction);
+        }
+    }
+
+    static boolean selectionRequiresSystemTransition(final int windowingMode) {
+        // Covered tasks need the same surface handoff as visible peers. Owned
+        // fullscreen planes retain their explicit surface composition path.
+        return windowingMode == FrameworkTaskSnapshot.WINDOWING_MODE_FREEFORM;
     }
 
     /**
      * Starts a transition directly in WMCore. This bypasses WMShell's local
      * pending-transition registration; current WMShell versions adopt the
      * token when it becomes ready, then play and finish its surface lifecycle.
-     * Use this only when applying a WCT directly would skip creation of task
-     * surfaces such as native freeform decorations.
+     * Use this when applying a WCT directly would skip task-surface creation
+     * or layer assignment. This is the submission itself, not a second pass
+     * after an atomic or synchronized commit of the same transaction.
      */
     static IBinder startForShellAdoption(
             final int displayId,
@@ -52,7 +85,7 @@ final class ShellWindowTransitionExecutor {
                 || reason == null || reason.isEmpty()) {
             throw new IllegalArgumentException("invalid system transition");
         }
-        final Object organizer = newWindowOrganizer();
+        final Object organizer = windowOrganizer();
         final IBinder token = (IBinder) organizer.getClass().getMethod(
                 "startNewTransition", Integer.TYPE, transactionClass)
                 .invoke(organizer, Integer.valueOf(transition.type), transaction);
@@ -63,10 +96,34 @@ final class ShellWindowTransitionExecutor {
         return token;
     }
 
-    private static Object newWindowOrganizer()
+    static void prepareSurfaceTransactions()
             throws ReflectiveOperationException {
-        return Class.forName("android.window.WindowOrganizer")
-                .getConstructor()
-                .newInstance();
+        windowOrganizer();
+    }
+
+    static synchronized String surfaceTransactionQueueState() {
+        return sWindowOrganizer == null ? "not_initialized" : "shared_with_wm";
+    }
+
+    private static synchronized Object windowOrganizer()
+            throws ReflectiveOperationException {
+        if (sWindowOrganizer == null) {
+            final Object organizer = Class.forName("android.window.WindowOrganizer")
+                    .getConstructor().newInstance();
+            shareSurfaceTransactionQueue(organizer);
+            sWindowOrganizer = organizer;
+        }
+        return sWindowOrganizer;
+    }
+
+    static void shareSurfaceTransactionQueue(final Object organizer)
+            throws ReflectiveOperationException {
+        // Match WMShell initialization: framework sync callbacks and our plane
+        // commits must use WM's apply token, not an independent process queue.
+        if (!Boolean.TRUE.equals(organizer.getClass()
+                .getMethod("shareTransactionQueue").invoke(organizer))) {
+            throw new IllegalStateException(
+                    "WindowManager surface transaction queue is unavailable");
+        }
     }
 }
